worked on home page

--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -1,8 +1,10 @@
-.productCart1{
-    width:285px !important;
+.productCart{
+    width:250px !important;
+    height:350px !important;
     display: inline-flex;
-    margin-left:20px;
+    margin-left:30px;
     margin-bottom: 50px;
+    box-sizing: border-box;
 }
 .addToCart{
     width:120px !important;
@@ -19,33 +21,39 @@
     margin-bottom: 4%;
 }
 .productCart_title{
-    color:rgb(85, 176, 212);
-    
+    /* color: #36b; */
+    font-size:medium;
+    padding: 3%;
+    text-align: center;
+    box-sizing: border-box;
 }
 
-.productCart_title{
-    text-align: center;
-}
-.productCart_price{
-    text-align: center !important; 
-}
 .productCart_button{
-    margin-left:27%;
+    margin-left:21%;
     background-color: red;
     border:none;
     width: 120px;
     height: 40px;
     border-radius: 4%;
+    box-sizing: border-box;
+}
+.productCart_rating{
+    text-align: center !important; 
+    box-sizing: border-box;
 }
 .productCart_price{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0%;
+    font-size: 14px;
+    /* box-sizing: border-box; */
+    /* padding-top: 20px !important; */
 }
 .productCart_body_display{
     padding-top: 0px;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
 
 }
-/* .productCart_button:hover{
-    background-color: red;
-} */
+.product_wrapper{
+    padding-left:5%;
+    box-sizing: border-box;
+}
