--- a/src/assets/css/PopularProduct.css
+++ b/src/assets/css/PopularProduct.css
@@ -1,51 +1,69 @@
 .productCart{
-    width:300px !important;
+    width:250px !important;
+    height:300px !important;
     display: inline-flex;
-    margin-left:100px;
+    margin-left:30px;
     margin-bottom: 50px;
+    box-sizing: border-box !important;
+}
+
+.product_wrapper{
+    padding-left:5%;
+    box-sizing: border-box;
 }
 .addToCart{
     width:120px !important;
-    margin-left:85px
+    margin-left:85px;
+    box-sizing: border-box;
 }
 .productCartImg{
-    padding:20px 20px 0px 20px;
+    width: 250px !important;
+    padding:0px 0px 0px 0px;
+    box-sizing: border-box;
 }
-.header1{
-    margin-left:510px;
-    margin-top:4%;
-    margin-bottom: 4%;
-}
-.productCart_title{
-    color:black !important
-    
-}
-.productCart_body{
-    /* padding: 0px !important; */
-}
-.productCart_title{
+.header{
     text-align: center;
+    box-sizing: border-box;
+    /* margin-top:4%; */
 }
-.productCart_price{
+.ViewAllLink{
+    /* text-align: center !important; */
+    margin-left: 604px;
+    margin-top: 300px !important;
+    box-sizing: border-box;
+    /* margin-bottom: 4000px; */
+
+}
+.productCart_title{
+    color: #36b;
+    font-size:medium;
+    padding: 3%;
+    /* text-align: center; */
+    /* box-sizing: border-box; */
+}
+
+.productCart_rating{
     text-align: center !important; 
+    box-sizing: border-box;
 }
 .productCart_button{
-    margin-left:27%;
+    margin-left:21%;
     background-color: red;
     border:none;
     width: 120px;
     height: 40px;
     border-radius: 4%;
+    box-sizing: border-box;
 }
 .productCart_price{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0%;
+    font-size: 14px;
+    /* box-sizing: border-box; */
+    /* padding-top: 20px !important; */
 }
 .productCart_body_display{
     padding-top: 0px;
-    padding-bottom: 40px;
-
+    padding-bottom: 10px;
+    /* box-sizing: border-box; */
 }
-/* .productCart_button:hover{
-    background-color: red;
-} */
