--- a/src/assets/css/slideimagesstyle.css
+++ b/src/assets/css/slideimagesstyle.css
@@ -1,8 +1,9 @@
 .SlideImage{
     width:100%;
-    height:440px
+    height:400px
     
 }
 .SlideImages{
     margin-top: 80px;
+    margin-bottom: 80px;
 }
