--- a/src/assets/css/ProductCard.css
+++ b/src/assets/css/ProductCard.css
@@ -7,7 +7,9 @@
     height:300px;
     width:262.5px;
     display: inline-flex;
-    margin:14px
+    margin:14px;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);;
+
     /* flex-direction: row; */
 }
 .ProductCardwrapperImg{
@@ -29,15 +31,19 @@
     text-align: center;
     margin-top: 0%;
     font-size: 14px;
+    margin-bottom: 9px;
     /* box-sizing: border-box; */
     /* padding-top: 20px !important; */
 }
 .ProductCardwrapperButton{
     margin-left:23%;
-    background-color: red;
+    background-color: #f44336;
+    color:white;
     border:none;
-    width: 120px;
+    width: 141px;
     height: 100%;
     border-radius: 4%;
     box-sizing: border-box;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);;
+
 }
