--- a/src/assets/css/productDetails.css
+++ b/src/assets/css/productDetails.css
@@ -1,8 +1,41 @@
 .productDetailImg{
-    width:480px;
+    width:500px;
     height:336px;
     padding-top: 80px;
-    padding-left:130px
+    padding-left:80px
+}
+.productDetailInfo{
+    padding-top:15%
+}
+.productDetailInfoTab{
+    margin-top:2%;
+    margin-bottom:7%
+    
+}
+.productDetailInfoButton1,.productDetailInfoButton2{
+    color:white;
+    margin-right: 4%;
+    width:160px;
+    height:40px;
+    border:none;
+    border-radius: 5%;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);;
+}
+.productDetailInfoButton1{
+    background-color: #00acee;;
+}
+.productDetailInfoButton2{
+    background-color:#754b10;
+}
+.productDetailInfoPrice{
+    color:green
+}
+.productDetailInfoButtons{
+    padding-top:10%;
+}
+.star{
+    margin-right:5px
+    /* text-decoration-style: none; */
 }
 .square {
     /* margin-top:20px; */
@@ -17,7 +50,7 @@
 .productDetailSubImg{
     width:80px;
     height:50px;
-    margin-left:100px
+    margin-left:80px
 }
 .productDetailColor{
     width:120px;
