--- a/src/assets/css/PopularProduct.css
+++ b/src/assets/css/PopularProduct.css
@@ -36,10 +36,12 @@
     /* margin-bottom: 4000px; */
 
 }
-@media screen and (min-width: 1480px){
+@media screen and (max-width: 600px){
     .ViewAllLinkWrapper{
-        margin-left:30px
+        margin-left:160px;
+        /* text-align: center; */
     }
+    
 }
 .ViewAllLink{
     color:black
