--- a/src/assets/css/ProductCard.css
+++ b/src/assets/css/ProductCard.css
@@ -12,6 +12,11 @@
 
     /* flex-direction: row; */
 }
+@media screen and (max-width:600px){
+    .ProductCardwrapperCard{
+        margin-left:32px;
+    }
+}
 .ProductCardwrapperImg{
     height:120px;
     width:100%;
