added required changes in localstorage

--- a/src/assets/css/cartIncart.css
+++ b/src/assets/css/cartIncart.css
@@ -2,3 +2,8 @@
     list-style-type: none;
     
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
